# flips

./: .gitignore  INSTALL  LICENSE  Make.defs  Make.defs.in  Make.defs~  Makefile  README  config.status  configure  configure.in
autom4te.cache/: output.0  requests  traces.0
doc/: Makefile  flipsMan.tex
interfaces/: FLIPS_interfaces_README  Makefile  flipseng29.f90  flipseng30.f90  flipseng31.f90  flipseng32.f90
interfaces/m_flips/: Contents.m  flips_demo.m  test_flips.m
interfaces/rflips/: DESCRIPTION  NAMESPACE
m4/: c_type.m4  d_type.m4  s_type.m4  z_type.m4
modules/: flips.m4
modules/auxillary/: find_first_and_len.m4  frind.f90  irind.f90  modcholmat.m4  modcholvec.m4  print_info.m4  relem.m4  rind.f90  yind.f90
modules/datamanagement/: add_to_buffer.m4  copy_matrix.m4  get_ir_row.m4  get_matrix_str.m4  get_row_str.m4  get_vector_str.m4  open_cov_file_str.m4  open_files_str.m4  open_invr_file_dir.m4  open_invr_file_str.m4  put_ir_col.m4  put_ir_col_rbr_dir.m4  put_ir_col_str_rbr.m4  put_row_str.m4  rresize.m4  write_solmat_file.m4
modules/datatypes/: flips_c.f90  flips_d.f90  flips_s.f90  flips_z.f90
tests/: Makefile  README  bw_remove_test  bw_remove_test.f90  bwtest  bwtest.f90  cholfactest  cholfactest.f90  cholspeed_vec  cholspeed_vec.f90  cholspeedtest  cholspeedtest.f90  comp_test  comp_test.f90  comp_test_odet.f90  cplx_comp  cplx_comp.f90  cvresizetest  cvresizetest.f90  fdel2  fdel2.f90  flipsdeletetest  flipsdeletetest.f90  flipsdeletetest_nodel.f90  flipsdeletetest_s  flipsdeletetest_s.f90  flipstest.f90  flipstest.mod  fobcopytest.f90  fullcovtest.f90  get_test.f90  gulips_manual_test  gulips_manual_test.f90  gulips_manual_test2.f90  inv_mat_test.f90  rand.f90  rand.mod  rbuf_size_test.f90  rbuf_size_test_d.f90  real_comp.f90  (+22 more)
(+61 files in other folders)
